[gd_scene load_steps=8 format=2]

[ext_resource path="res://alien_theme.tres" type="Theme" id=1]
[ext_resource path="res://explorer/explorer.gd" type="Script" id=2]
[ext_resource path="res://explorer_address_bar/explorer_address_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://explorer/validation_indicator.gd" type="Script" id=4]
[ext_resource path="res://vtri_split_container/vtri_split_container.gd" type="Script" id=5]
[ext_resource path="res://regex_rule_container/regex_rule_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://window_resize_handles/window_resize_handles.tscn" type="PackedScene" id=7]

[node name="Explorer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainVBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="ExplorerAddressBar" parent="MainVBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1016.0
margin_bottom = 22.0

[node name="ValidDirIndicator" type="ColorRect" parent="MainVBoxContainer"]
margin_top = 26.0
margin_right = 1016.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 4 )
size_flags_vertical = 8
script = ExtResource( 4 )

[node name="FileSplitContainer" type="VSplitContainer" parent="MainVBoxContainer"]
margin_top = 34.0
margin_right = 1016.0
margin_bottom = 566.0
size_flags_vertical = 3

[node name="RuleSplitContainer" type="VSplitContainer" parent="MainVBoxContainer/FileSplitContainer"]
margin_right = 1016.0
margin_bottom = 262.0
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="OriginalFileList" type="ItemList" parent="MainVBoxContainer/FileSplitContainer/RuleSplitContainer"]
margin_right = 1016.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3
select_mode = 1
allow_reselect = true

[node name="RegexRuleScrollContainer" type="ScrollContainer" parent="MainVBoxContainer/FileSplitContainer/RuleSplitContainer"]
margin_top = 197.0
margin_right = 1016.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 65 )
scroll_horizontal_enabled = false

[node name="RegexRuleContainer" parent="MainVBoxContainer/FileSplitContainer/RuleSplitContainer/RegexRuleScrollContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1016.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewFileList" type="ItemList" parent="MainVBoxContainer/FileSplitContainer"]
margin_top = 270.0
margin_right = 1016.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="MainVBoxContainer"]
margin_top = 570.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="RegexLibraryButton" type="Button" parent="MainVBoxContainer/ButtonHBoxContainer"]
margin_right = 97.0
margin_bottom = 22.0
text = "Regex Library"

[node name="RenameFilesButton" type="Button" parent="MainVBoxContainer/ButtonHBoxContainer"]
margin_left = 101.0
margin_right = 1016.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Rename Files"

[node name="WindowResizeHandles" parent="." instance=ExtResource( 7 )]
[connection signal="path_changed" from="MainVBoxContainer/ExplorerAddressBar" to="." method="_on_ExplorerAddressBar_path_changed" flags=3]
[connection signal="item_activated" from="MainVBoxContainer/FileSplitContainer/RuleSplitContainer/OriginalFileList" to="." method="_on_OriginalFileList_item_activated"]
[connection signal="multi_selected" from="MainVBoxContainer/FileSplitContainer/RuleSplitContainer/OriginalFileList" to="." method="_on_OriginalFileList_multi_selected"]
[connection signal="rules_updated" from="MainVBoxContainer/FileSplitContainer/RuleSplitContainer/RegexRuleScrollContainer/RegexRuleContainer" to="." method="_update_file_output" flags=3 binds= [ true ]]
[connection signal="pressed" from="MainVBoxContainer/ButtonHBoxContainer/RenameFilesButton" to="." method="_on_RenameFilesButton_pressed"]
